--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": ">=22.0.0"
   },
   "scripts": {
+    "lint": "prettier . --check",
+    "format": "prettier . --write",
     "test": "pnpm run test:unit && pnpm run test:integration",
     "test:unit": "vitest",
     "test:watch": "node --test --watch tests/*.test.js",
