--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@babel/core": "^7.23.0",
     "@babel/generator": "^7.23.0",
     "@babel/parser": "^7.23.0",
+    "@babel/plugin-transform-typescript": "^7.28.0",
     "@babel/traverse": "^7.23.0",
     "@babel/types": "^7.23.0",
     "concurrently": "^9.2.0",
+    "decorator-transforms": "^2.3.0",
     "prettier": "^3.5.3",
     "prettier-plugin-ember-template-tag": "^2.0.6",
     "publint": "^0.3.12",
